[lworld] C2 compilation fails with assert(_base == AryPtr) failed: Not an array pointer

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x00007fd9b28ba36d, pid=29976, tid=30067

      Current CompileTask:
      C2: 5087 2208 4 jdk.internal.util.Preconditions::outOfBounds (49 bytes)

      Stack: [0x00007fd9842ff000,0x00007fd984400000], sp=0x00007fd9843fcad0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xc6036d] Parse::array_addressing(BasicType, int, Type const*&)+0x14bd
      V [libjvm.so+0xc6070b] Parse::array_load(BasicType)+0x3b
      V [libjvm.so+0xc5abe8] Parse::do_one_block()+0x208
      V [libjvm.so+0xc5b015] Parse::do_all_blocks()+0xe5
      V [libjvm.so+0xc5e5bf] Parse::Parse(JVMState*, ciMethod*, float)+0xb2f
      V [libjvm.so+0x50a2ab] ParseGenerator::generate(JVMState*)+0x8b
      V [libjvm.so+0x68ccb9] Parse::do_call()+0x1f9
      V [libjvm.so+0xc5abe8] Parse::do_one_block()+0x208
      V [libjvm.so+0xc5b015] Parse::do_all_blocks()+0xe5
      V [libjvm.so+0xc5e5bf] Parse::Parse(JVMState*, ciMethod*, float)+0xb2f
      V [libjvm.so+0x50a2ab] ParseGenerator::generate(JVMState*)+0x8b
      V [libjvm.so+0x5cc93d] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0xcbd
      V [libjvm.so+0x509a5f] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x16f
      V [libjvm.so+0x5d6578] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd28
      V [libjvm.so+0x5d7018] CompileBroker::compiler_thread_loop()+0x4b8
      V [libjvm.so+0xdf02eb] JavaThread::thread_main_inner()+0x11b
      V [libjvm.so+0xdf4fcd] Thread::call_run()+0xfd
      V [libjvm.so+0xc35737] thread_native_entry(Thread*)+0xe7



      # Internal Error (/oracle/valhalla/open/src/hotspot/share/opto/type.hpp:1851), pid=1448624, tid=1448640
      # assert(_base == AryPtr) failed: Not an array pointer

      Current CompileTask:
      C2: 809 177 b 4 compiler.valhalla.inlinetypes.TestLWorldProfiling::test40 (6 bytes)

      Stack: [0x00007f8296036000,0x00007f8296137000], sp=0x00007f82961333a0, free space=1012k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x169f558] Type::is_aryptr() const [clone .part.0]+0x28
      V [libjvm.so+0x16a17fc] Parse::array_addressing(BasicType, int, Type const*&)+0xbac
      V [libjvm.so+0x16a2238] Parse::array_load(BasicType)+0x38
      V [libjvm.so+0x16b4265] Parse::do_one_bytecode()+0x2ee5
      V [libjvm.so+0x1697838] Parse::do_one_block()+0x848
      V [libjvm.so+0x1698760] Parse::do_all_blocks()+0x130
      V [libjvm.so+0x169d7f0] Parse::Parse(JVMState*, ciMethod*, float)+0xe70
      V [libjvm.so+0x8729f5] ParseGenerator::generate(JVMState*)+0x115
      V [libjvm.so+0xba4469] Parse::do_call()+0x4f9
      V [libjvm.so+0x16b17c8] Parse::do_one_bytecode()+0x448
      V [libjvm.so+0x1697838] Parse::do_one_block()+0x848
      V [libjvm.so+0x1698760] Parse::do_all_blocks()+0x130
      V [libjvm.so+0x169d7f0] Parse::Parse(JVMState*, ciMethod*, float)+0xe70
      V [libjvm.so+0x8729f5] ParseGenerator::generate(JVMState*)+0x115
      V [libjvm.so+0xa53821] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x1071
      V [libjvm.so+0x86f99a] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa647c8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa65318] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x1991166] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1997ae0] Thread::call_run()+0x100
      V [libjvm.so+0x1652726] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: