8257832: [lworld] C2 compilation fails with assert(_base == AryPtr) failed: Not an array pointer